<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">King Of Image Browsing</string>
    <string name="user_account">Account</string>
    <string name="title">koib</string>
    <string name="search">Enter tag</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_in_progress">Logging in&#8230;</string>
    <string name="login_failed">Login failed!</string>
    <string name="login_successful">%1$s successfully logged in!</string>
    <string name="logged_in_guide">%1$s is currently logged in. Logout to use a different account.</string>
    <string name="login_guide">Please enter your Google account data to login</string>
    <string name="logout_in_progress">Logging out&#8230;</string>
    <string name="logout_successful">%1$s successfully logged out!</string>
    <string name="logout_failed">Logout failed!</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_hint">tag to search&#8230;</string>
    <string name="albums_query_failed">There was a problem while querying for albums</string>
    <string name="albums_query_noresults">No albums found</string>
    <string name="images_query_failed">There was a problem while querying for images</string>
    <string name="images_query_noresults">No images found</string>
    <string name="loading_albums">Fetching albums, please wait...</string>
    <string name="loading_thumbnails">Fetching thumbnails for the album, please wait...</string>
    <string name="loading_fullscreen">Fetching fullscreen image, please wait...</string>
    <string name="searching_images">Searching images, please wait...</string>

</resources>